# TextureEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/: EditorState.h  Initializers.h  common.h  initializers.h
include/Modules/Controls/: Center.h  Controls.h  Mouse.h
include/Modules/Effects/Filters/: Blur.h  Edge_Enhancement.h
include/Modules/Menu/: About.h  Edit.h  File.h  Help.h  Image.h  Menu.h  Report.h  Settings.h
include/Modules/Messaging/: Messenger.h
include/Modules/Report/: Report.h
include/Modules/States/: EditorState.h
include/Modules/States/Memento/: Caretaker.h  Infrastructure.h  Memento.h  Originator.h
include/Modules/States/UndoRedo/: Command.h  Storage.h
include/Modules/Textures/: Exporter.h  Loader.h  Resize.h  State.h
include/modules/controls/: center.h  control.h  controls.h  flip.h  mouse.h  rotations.h
include/modules/effects/: blending.h  strips.h
include/modules/filters/: applier.h  binary_thresholds.h  blur.h  borders.h  brightness_adjustment.h  color_noise.h  color_noise_2.h  colorize.h  contrast_adjustment.h  duotone.h  edge_enhancement.h  emboss.h  exposure_adjustment.h  halftone.h  high_pass.h  invert.h  posterization.h  roberts_cross.h  sepia_tone.h  tritone.h  vintage.h  white_correction.h
include/modules/logger/: messenger.h  profiler.h
include/modules/menu/: about.h  edit.h  file.h  image.h  menu.h  report.h
include/modules/states/: editor_state.h
include/modules/states/memento/: caretaker.h  infrastructure.h  originator.h
include/modules/stats/: image_info.h
include/modules/styles/: background.h
include/modules/textures/: exporter.h  loader.h  resize.h
include/modules/utilities/: color.h
src/: main.cpp
src/Modules/Controls/: Mouse.cpp
src/Modules/Effects/Filters/: Blur.cpp  Edge_Enhancement.cpp
src/Modules/Messaging/: Messenger.cpp
src/Modules/Report/: Report.cpp
src/Modules/Textures/: Exporter.cpp  Loader.cpp  Resize.cpp
src/modules/GPU/filters/: grayscale.cu
src/modules/controls/: mouse.cpp
src/modules/effects/: blending.cpp  strips.cpp
src/modules/filters/: blur.cpp  borders.cpp  brightness_adjustment.cpp  color_noise.cpp  color_noise_2.cpp  colorize.cpp  contrast_adjustment.cpp  duotone.cpp  edge_enhancement.cpp  emboss.cpp  exposure_adjustment.cpp  film_grain.cpp  gamma_correction.cpp  grayscale.cpp  halftone.cpp  high_pass.cpp  invert.cpp  posterization.cpp  roberts_cross.cpp  sepia_tone.cpp  tritone.cpp  vintage.cpp  white_correction.cpp
src/modules/logger/: messenger.cpp  profiler.cpp
src/modules/textures/: exporter.cpp  loader.cpp  resize.cpp
